// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSunmary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
    , totalling 
    $2.35
  </h1>
</div>
`;

exports[`should corrrectly render ExpensesSummary with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
    , totalling 
    $4,397.54
  </h1>
</div>
`;
